--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -12,26 +12,25 @@ caratteristicaSito=caratteristicaSito_IT
 tipoProcesso=tpnome_IT
 sito=Sito
 effMorfologici=emtipo_IT
-nomeLitologia=nomeLitologia_IT
 proprietaTermiche=proprietaTermiche_IT
-statoFratturazione=Statto Fratturazione
-ora=Ora
+statoFratturazione=Stato di fratturazione
+ora=Ora (hh:mm)
 superficie=Superficie
 larghezza=Larghezza
 altezza=Altezza
-volumeSpecifico=Volume Specifico
+volumeSpecifico=Volume specifico
 intervallo=Intervallo
-tipologiaProcesso=Tipologia Processo
+tipologiaProcesso=Tipologia processo
 danniTitolo=Danni
 danni=Danni
-effettiMorfologici=Effetti Morfologici
-gradoDanno=Grado Danno
+effettiMorfologici=Effetti morfologici
+gradoDanno=Grado danno
 danneggiato= Danneggiato
 distrutto= Distrutto
 minacciato = Minacciato
-litologiaTitolo=Litologia
+litologiaTitolo=Geologia
 litologia=Litologia
-propTermiche=Propriet\u00e0 Termiche
+propTermiche=Propriet\u00e0 termiche
 statoFrattura=statoFratturazione_IT
 note=Note
 titoloUbicazione=Ubicazione
@@ -43,7 +42,7 @@ regione=Regione
 nazione=Nazione
 latitudine=Latitudine
 longitudine=Longitudine
-prendiCoordinateMappa=Coordinate dalla Mappa
+prendiCoordinateMappa=Coordinate dalla mappa
 quota=Quota
 esposizione=Esposizione
 attendibilita=Attendibilit\u00e0 dell'ubicazione
@@ -52,8 +51,8 @@ dettagli=Dettagli
 elimina=Elimina
 titoloProcesso=Dati sul processo
 lito=nomeLitologia_IT
-sottobacino=SottoBacino
-dettagliProcesso=Dettagli Processo
+sottobacino=Sotto bacino
+dettagliProcesso=Dettagli processo
 allegati=Allegati
 data=Data
 fonte=Fonte
@@ -66,8 +65,56 @@ se=SUD-EST
 s=SUD
 so=SUD-OVEST
 o=OVEST
-no=NORD-OVESt
+no=NORD-OVEST
 puntuale=Puntuale
 areale=Areale
 indicativa=Indicativa
-=
+datiSullaStazione=Dati sulla stazione
+aggregazioneTemporale=Aggregazione temporale
+tipoDiAggregazioneGiornaliera=Tipo di aggregazione giornaliera
+dataInizio=Data inizio attivit\u00e0
+dataFine=Data fine attivit\u00e0
+ente=Ente
+sensori=Sensori
+inserisciStazione=Inserisci stazione
+inserisciProcesso=Inserisci Processo
+titoloStazione=tsnome IT
+datiUbicazione=Dati sull'ubicazione
+caratteristicheSitoStazione=caratteristiche_IT
+inserisciDatiClimatici=Inserisci dati climatici
+allegatoProcesso=Inserisci allegato processo
+allegatoStazione=Inserisci allegato stazione 
+inserisci=Inserisci
+mostra=Mostra
+mostraTuttiProcessi=Mostra tutti i processi
+mostraTutteStazioni=Mostra tutte le stazioni
+ricerca=Ricerca
+ricercaProcesso=Ricerca processo
+ricercaStazione=Ricerca stazione
+queryClimatiche=Query climatiche
+elaborazioni=Elaborazioni
+areaRiservata=Area riservata
+creaUtente=Crea utente
+visualizzaUtenti=Visualizza gli utenti
+documentazione=Documentazione
+applicazioneAndroid=Applicazione android
+statistiche=Statistiche
+affidabilitaCoordinate=Affidabilit\u00e0 coordinate
+evento=Evento
+dettagliEvento=Dettagli evento
+tipologia=Tipologia
+ubicazione=Ubicazione
+morfologiaSito=Morfologia sito
+altezzaNicchia=Altezza nicchia
+larghezzaNicchia=Larghezza nicchia
+superficieNicchia=Superficie nicchia
+volumeNicchia=Volume nicchia
+classeVolume=Classe volume
+distanzaPropagazione=Distanza propagazione
+volumeAccumulo=Volume dell'accumulo
+superficieAccumulo=Superficie dell'accumulo
+geologia=Geologia
+proprietatermiche=Propriet\u00e0 termiche
+impatti=Impatti
+inserimento=Inserimento
+consultazione=Consultazione
