--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -5,15 +5,114 @@
 descrizione = Description
 nome = Name
 anno=Year
-mese=
-giorno=
+mese=Mounth
+giorno=Day
 tipoDanno=dtipo_ENG
 caratteristicaSito=caratteristicaSito_ENG
 tipoProcesso=tpnome_ENG
 sito=Site
 effMorfologici=emtipo_ENG
-nomeLitologia=nomeLitologia_ENG
 proprietaTermiche=proprietaTermiche_ENG
-statoFratturazione=
+statoFratturazione=Degree of fracturing
 statoFrattura=statoFratturazione_ENG
 lito=nomeLitologia_ENG
+ora=Time (hh:mm)
+superficie=Surface
+larghezza=Width
+altezza=Height
+volumeSpecifico=Specific volume
+intervallo=Volume range
+tipologiaProcesso=Process type
+danniTitolo=Damages
+danni=Damages
+effettiMorfologici=Morphological effects
+gradoDanno=Degre of damage
+litologiaTitolo=Geology
+litologia=Lithology
+propTermiche=Thermical properties
+note=Notes
+dettagliProcesso=Process detail
+processo=Process
+danneggiato=Damaged
+distrutto=Destroyed
+minacciato=Threatened
+titoloUbicazione=Localization
+sottobacino=Sub-basin
+bacino=River basin
+comune=County
+provincia=Province
+regione=Region
+nazione=Country
+latitudine=Latitude
+longitudine=Longitude
+prendiCoordinateMappa=Map coordinates
+quota=Elevation
+esposizione=Exposure
+n=North
+ne=North-Est
+e=Est
+se=South-Est
+s=South
+so=South-West
+o=West
+no=North-West
+attendibilita=Localization degree
+puntuale=Point
+areale=Aerial
+indicativa=Indicative
+dettagli=Detail
+elimina=Cancel
+allegati=Attachments
+modifica=Modification
+data=Date
+fonte=Source
+immagini=Images
+datiSullaStazione=
+aggregazioneTemporale=
+tipoDiAggregazioneGiornaliera=
+dataInizio=
+dataFine=
+ente=
+sensori=
+inserisciStazione=
+inserisciProcesso=
+titoloStazione=
+datiUbicazione=
+caratteristicheSitoStazione=caratteristiche_ENG
+inserisciDatiClimatici=
+allegatoProcesso=
+allegatoStazione=
+inserisci=
+mostra=
+mostraTuttiProcessi=
+mostraTutteStazioni=
+ricerca=Search
+ricercaProcesso=
+ricercaStazione=
+queryClimatiche=
+elaborazioni=
+areaRiservata=Reserved area
+creaUtente=
+visualizzaUtenti=
+documentazione=
+applicazioneAndroid=
+statistiche=
+affidabilitaCoordinate=
+evento=
+dettagliEvento=
+tipologia=
+ubicazione=
+morfologiaSito=
+altezzaNicchia=
+larghezzaNicchia=
+superficieNicchia=
+volumeNicchia=
+classeVolume=
+distanzaPropagazione=
+volumeAccumulo=
+superficieAccumulo=
+geologia=
+proprietatermiche=
+impatti=
+inserimento=Data entry
+consultazione=Consultation
