--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -77,7 +77,7 @@ dataFine=Data fine attivit\u00e0
 ente=Ente
 sensori=Sensori
 inserisciStazione=Inserisci stazione
-inserisciProcesso=Inserisci Processo
+inserisciProcesso=Inserisci processo
 titoloStazione=Dati sulla stazione
 datiUbicazione=Dati sull'ubicazione
 caratteristicheSitoStazione=caratteristiche_IT
@@ -129,3 +129,16 @@ tabella=Tabella
 stazione=Stazione
 tipo=Tipo
 nomeTipo=Nome tipo
+visualizzaTuttiUtenti=Visuaizza tutti gli utenti
+aggiornamenu=Aggiorna men\u00f9
+appAndroid=Applicazione Android
+pubblico=Pubblico
+inserisciDati=Inserisci dati climatici
+allegaProcesso=Insersici allegato a un processo
+tuttiProcessi=Elenca tutti i processi
+tutteStazioni=Elenca tutte le stazioni
+allegaStazione=Insersici allegato a un processo
+climatiche=Ricerca dati metereologici
+superficieaccumulo=Superficie dell'accumulo
+volumeaccumulo=Volume dell'accumulo
+runout=Distanza di propagazione
