query+modifica allegato

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -5,7 +5,7 @@
 descrizione = Description
 nome = Name
 anno=Year
-mese=Mounth
+mese=Month
 giorno=Day
 tipoDanno=dtipo_ENG
 caratteristicaSito=caratteristicaSito_ENG
@@ -67,36 +67,36 @@ modifica=Modification
 data=Date
 fonte=Source
 immagini=Images
-datiSullaStazione=
+datiSullaStazione=Data on weather station
 aggregazioneTemporale=Temporal aggregation
 tipoDiAggregazioneGiornaliera=
 dataInizio=
 dataFine=
 ente=
 sensori=
-inserisciStazione=
-inserisciProcesso=
+inserisciStazione=Include  weather station
+inserisciProcesso=Include  process
 titoloStazione=
 datiUbicazione=
 caratteristicheSitoStazione=caratteristiche_ENG
-inserisciDatiClimatici=
+inserisciDatiClimatici=Add climate data
 allegatoProcesso=Process attachment
 allegatoStazione=Station attachment
-inserisci=
-mostra=
-mostraTuttiProcessi=
-mostraTutteStazioni=
+inserisci=Include
+mostra=Show
+mostraTuttiProcessi=Shows all the processes
+mostraTutteStazioni=Shows all the weather stations
 ricerca=Search
-ricercaProcesso=
-ricercaStazione=
-queryClimatiche=
-elaborazioni=
+ricercaProcesso=Search process
+ricercaStazione=Search weather station
+queryClimatiche=Climatic query
+elaborazioni=Processing
 areaRiservata=Reserved area
 creaUtente=New User
-visualizzaUtenti=
-documentazione=
+visualizzaUtenti=Shows all the users
+documentazione=Documentation
 applicazioneAndroid=Android application
-statistiche=
+statistiche=Statistics
 affidabilitaCoordinate=Integrity of coordinates
 evento=
 dettagliEvento=
@@ -110,23 +110,23 @@ volumeNicchia=
 classeVolume=Volume class
 distanzaPropagazione=
 volumeAccumulo=
-superficieAccumulo=sup
+superficieAccumulo=
 geologia=
 proprietatermiche=
 impatti=
 inserimento=Data entry
 consultazione=Consultation
-utente=
+utente=User
 cognome=Lastname
-ruolo=
+ruolo=Role
 attivo=Active
-dataCreazione=
-ultimoAccesso=
-operazione=
-tabella=
-stazione=
-tipo=
-nomeTipo=
+dataCreazione=Creation date
+ultimoAccesso=Last access
+operazione=Operation
+tabella=Table
+stazione=Station
+tipo=Type
+nomeTipo=Type name
 modificaProc=Update process
 titoloProcesso=Information about process
 superficieaccumulo=Surface of accumulation
@@ -135,3 +135,16 @@ allegaProcesso=Process attach
 allegaStazione=Station attach
 appAndroid=Android application
 climatiche=Search metereologic dates
+runout=Runout
+tuttiProcessi=Shows all processes
+tutteStazioni=Shows all weather stations
+inserisciDati=Add climate data
+visualizzaTuttiUtenti=Display all users
+pubblico=Public
+noDiritti=
+autore=
+titolo=
+in=
+urlDelSito=
+caricaFile=
+allega=
