--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -142,3 +142,10 @@ superficieaccumulo=Superficie dell'accumulo
 volumeaccumulo=Volume dell'accumulo
 runout=Distanza di propagazione
 modificaProc=Modifica il processo
+noDiritti=Spiacente non hai i privilegi sufficienti per l'operazione selezionata
+autore=Autore
+titolo=Titolo
+in=In
+urlDelSito=Url del sito
+caricaFile=Carica file
+allega=Allega
