--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -5,7 +5,7 @@
 descrizione = Description
 nome = Name
 anno=Year
-mese=Month
+mese=Mounth
 giorno=Day
 tipoDanno=dtipo_ENG
 caratteristicaSito=caratteristicaSito_ENG
@@ -67,62 +67,62 @@ modifica=Modification
 data=Date
 fonte=Source
 immagini=Images
-datiSullaStazione=Data on weather station
+datiSullaStazione=Metadata station
 aggregazioneTemporale=Temporal aggregation
-tipoDiAggregazioneGiornaliera=
-dataInizio=
-dataFine=
-ente=
-sensori=
-inserisciStazione=Include  weather station
-inserisciProcesso=Include  process
-titoloStazione=
-datiUbicazione=
+tipoDiAggregazioneGiornaliera=Type of daily aggregation
+dataInizio=Start date
+dataFine=End date
+ente=Public body
+sensori=Sensors
+inserisciStazione=Insert a station
+inserisciProcesso=Insert a process
+titoloStazione=Station data
+datiUbicazione=Localization data
 caratteristicheSitoStazione=caratteristiche_ENG
-inserisciDatiClimatici=Add climate data
+inserisciDatiClimatici=Insert climate data
 allegatoProcesso=Process attachment
 allegatoStazione=Station attachment
-inserisci=Include
+inserisci=Insert
 mostra=Show
-mostraTuttiProcessi=Shows all the processes
-mostraTutteStazioni=Shows all the weather stations
+mostraTuttiProcessi=Show all processes
+mostraTutteStazioni=Show all stations
 ricerca=Search
-ricercaProcesso=Search process
-ricercaStazione=Search weather station
-queryClimatiche=Climatic query
-elaborazioni=Processing
+ricercaProcesso=Search a process
+ricercaStazione=Search a station
+queryClimatiche=Climatic queries
+elaborazioni=Data processing
 areaRiservata=Reserved area
 creaUtente=New User
-visualizzaUtenti=Shows all the users
+visualizzaUtenti=Show users
 documentazione=Documentation
 applicazioneAndroid=Android application
 statistiche=Statistics
 affidabilitaCoordinate=Integrity of coordinates
-evento=
-dettagliEvento=
-tipologia=
-ubicazione=
-morfologiaSito=
+evento=Event
+dettagliEvento=Event details
+tipologia=Type of event
+ubicazione=Localization
+morfologiaSito=Morphology of the site
 altezzaNicchia=Recess height
-larghezzaNicchia=
-superficieNicchia=
-volumeNicchia=
+larghezzaNicchia=Width of the landslide detachment zone
+superficieNicchia=Surface of the landslide detachment zone
+volumeNicchia=Volume of the landslide detachment zone
 classeVolume=Volume class
-distanzaPropagazione=
-volumeAccumulo=
-superficieAccumulo=
-geologia=
-proprietatermiche=
-impatti=
+distanzaPropagazione=Propagation distance
+volumeAccumulo=Volume accumulation
+superficieAccumulo=Surface accumulation
+geologia=Geology
+proprietatermiche=Thermal properties
+impatti=Impacts
 inserimento=Data entry
 consultazione=Consultation
 utente=User
 cognome=Lastname
-ruolo=Role
+ruolo=Rule
 attivo=Active
 dataCreazione=Creation date
-ultimoAccesso=Last access
-operazione=Operation
+ultimoAccesso=Last process
+operazione=Function
 tabella=Table
 stazione=Station
 tipo=Type
@@ -131,20 +131,20 @@ modificaProc=Update process
 titoloProcesso=Information about process
 superficieaccumulo=Surface of accumulation
 aggiornamenu=Update men\u00f9
-allegaProcesso=Process attach
-allegaStazione=Station attach
+allegaProcesso=Insert an attachment process
+allegaStazione=Insert an attachment station
 appAndroid=Android application
-climatiche=Search metereologic dates
-runout=Runout
-tuttiProcessi=Shows all processes
-tutteStazioni=Shows all weather stations
-inserisciDati=Add climate data
-visualizzaTuttiUtenti=Display all users
-pubblico=Public
+climatiche=Search climatic data
+pubblico=Free access
+runout=Propagation distance
+volumeaccumulo=Volume accumulation
+tuttiProcessi=Process list
+tutteStazioni=Station list
+visualizzaTuttiUtenti=Show all users
+inserisciDati=insert climatic data
+datiPrecipitazione=
+datiAvg=
+datiMin=
+datiMax=
+datiClimatici=
 noDiritti=
-autore=
-titolo=
-in=
-urlDelSito=
-caricaFile=
-allega=
