--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -131,21 +131,20 @@ nomeTipo=Nome tipo
 visualizzaTuttiUtenti=Visuaizza tutti gli utenti
 aggiornamenu=Aggiorna men\u00f9
 appAndroid=Applicazione Android
-pubblico=Pubblico
+pubblico=Rendi di pubblico dominio
 inserisciDati=Inserisci dati climatici
 allegaProcesso=Insersici allegato a un processo
 tuttiProcessi=Elenca tutti i processi
 tutteStazioni=Elenca tutte le stazioni
 allegaStazione=Insersici allegato a un stazione
-climatiche=Ricerca dati metereologici
+climatiche=Ricerca dati climatici
 superficieaccumulo=Superficie dell'accumulo
 volumeaccumulo=Volume dell'accumulo
 runout=Distanza di propagazione
 modificaProc=Modifica il processo
-noDiritti=Spiacente non hai i privilegi sufficienti per l'operazione selezionata
-autore=Autore
-titolo=Titolo
-in=In
-urlDelSito=Url del sito
-caricaFile=Carica file
-allega=Allega
+datiPrecipitazione=Dati precipitazioni
+datiAvg=Dati temperatura media
+datiMin=Dati temperatura minima
+datiMax=Dati temperatura massima
+datiClimatici=Dati climatici
+noDiritti=Spiacente non possiedi i diritti d'accesso
