fatto : - lingua per modifica allegato -footer -documentation(eng) perche it guidoha sbagliato -index eng e it -modifca stazione con pubblico -modifica processo con pubblico e visualizzazione date corretta

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -149,3 +149,7 @@ datiMax=Dati temperatura massima
 datiClimatici=Dati climatici
 noDiritti=Spiacente non possiedi i diritti d'accesso
 allProcess=Elenco dei processi
+autore=Autore
+titolo=Titolo
+in=In
+urlDelSito=Url del sito
