corretto allegati dettagli e modifica per stazione

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -153,3 +153,7 @@ autore=Autore
 titolo=Titolo
 in=In
 urlDelSito=Url del sito
+allegaFileAProcesso=Allega file a processo
+caricaFile=Carica file
+allega=Allega
+allegaFileAStazione=Allega file stazione
