fatti alcuni aggiustamenti nella servlet per poter aggiustare il modifica (si prevede di usare jsf)

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -108,7 +108,7 @@ larghezzaNicchia=Width of the landslide detachment zone
 superficieNicchia=Surface of the landslide detachment zone
 volumeNicchia=Volume of the landslide detachment zone
 classeVolume=Volume class
-distanzaPropagazione=Propagation distance
+distanzaPropagazione=Run out
 volumeAccumulo=Volume accumulation
 superficieAccumulo=Surface accumulation
 geologia=Geology
