dovrebbero essere corrette le modifiche(ci sono ancora dei difettucci)

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -149,10 +149,10 @@ datiMax=
 datiClimatici=
 noDiritti=
 allProcess=Process list
-autore=
-titolo=
-in=
-urlDelSito=
+autore=Author
+titolo=title
+in=In
+urlDelSito=URL
 allegaFileAProcesso=
 caricaFile=Upload file
 allega=
