finito modifica processo e ridefinite le regole delle select

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -157,3 +157,4 @@ allegaFileAProcesso=Allega file a processo
 caricaFile=Carica file
 allega=Allega
 allegaFileAStazione=Allega file stazione
+nomeFile=Nome del file
