aggiunti nomi inglesi

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_en_US.properties
@@ -157,3 +157,6 @@ allegaFileAProcesso=
 caricaFile=Upload file
 allega=Attachments
 allegaFileAStazione=
+ScegliProcessoAllegato=
+ScegliStazioneAllegato=
+dettagliStazione=
