--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string_it_IT.properties
@@ -157,3 +157,6 @@ allegaFileAProcesso=Allega file a processo
 caricaFile=Carica file
 allega=Allega
 allegaFileAStazione=Allega file stazione
+ScegliProcessoAllegato=Scegli un processo a cui allegare un file
+ScegliStazioneAllegato=Scegli una stazione a cui allegare un file
+dettagliStazione=Dettagli stazione meteorologica
